--- a/_posts/2017-02-01-example-7.markdown
+++ b/_posts/2017-02-01-example-7.markdown
@@ -106,9 +106,11 @@ paginate_path: "page:num"
 只是开启了分页还没有用，我们需要确实使用到首页之中，在首页(/index.html)中添加如下代码：
 
 {% highlight ruby %}
+
 {% for post in paginator.posts %}
     <a href="{{ post.url }}">{{ post.title }}</a>
 {% endfor %}
+
 {% endhighlight %}
 
 这样，jekyll就会根据paginator来进行分页了，被分出来多少页，就会有多少个页面生成。排1-5的文章就在/index.html中了，而排6-10的文章则在/page2/index.html中，依次类推
@@ -118,23 +120,28 @@ paginate_path: "page:num"
 
 首先检测总的页数，如果只有一页，自然就不需要分页了。通过paginator的total_pages属性能判断总页数：
 
-```
+{% highlight ruby %}
+
 {% if paginator.total_pages > 1 %}
 <!-- 分页代码 -->
 {% endif %}
-```
+
+{% highlight ruby %}
 
 我们需要一个跳转到上一页的按钮，这个按钮在第一页不需要显示，通过paginator的previous_page属性来判断是否是第一个页面，使用paginator的previous_page_path来输出上一页的路径，注意在前面添加baseurl，并进行一些必要的字符替换：
 
-```
+{% highlight ruby %}
+
 {% if paginator.previous_page %}
     <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}"上一页</a>
 {% endif %}
-```
+
+{% highlight ruby %}
 
 接着是生成所有页面的按钮，并使当前页按钮无效化，遍历所有页面，使用paginator的page属性来确定当前页，如果是当前页，则按钮无效，否则使用{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}来将:num替换成当前页面的数字生成页面路径：
 
-```
+{% highlight ruby %}
+
 {% for page in (1..paginator.total_pages) %}
     {% if page == paginator.page %}
       <span class="active">{{ page }}</span>
@@ -144,15 +151,18 @@ paginate_path: "page:num"
       <a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
     {% endif %}
 {% endfor %}
-```
+
+{% highlight ruby %}
 
 最后生成一个下一页的按钮，在最后一页不显示，和上一页按钮类似，通过paginator的next_page_path来确定是否还有下一页：
 
-```
+{% highlight ruby %}
+
 {% if paginator.next_page %}
     <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">下一页</a>
 {% endif %}
-```
+
+{% highlight ruby %}
 
 这样一个完整的分页导航功能就做好了，效果就和博客主页上的分页效果是一样的
 
