--- a/_posts/2017-02-01-hello.markdown
+++ b/_posts/2017-02-01-hello.markdown
@@ -4,17 +4,12 @@ title:  "他不是老实，他只是没机会放荡"
 description: 刘墉说过：“越是没身份、没地位、没财产、没退路的男人，你愈要小心。”大多数老实人只是没资本才老实，姑娘们擦亮眼睛。 
 date:   2017-02-01 10:51:47 +0530
 categories: jekyll update
-img: image-6.jpg
+img: "http://pic.jiaren.org/wp-pic/2016/10/b46.jpg"
 categories: [one, two]
 color: BF360C
 author: 摆渡人
 ---
-
-![Karna](http://pic.jiaren.org/wp-pic/2016/10/b46.jpg)
-
-文/摆渡人
-
-01
+# 01
 
 “小伙子人特别老实，脾气又好。虽然条件没有很优越，但是结婚过日子就得找个老实的。”楼下的阿姨极力向小蕾介绍。
 
@@ -28,7 +23,7 @@ author: 摆渡人
 
 小蕾跟他确定了关系。日子虽然没有像年轻恋爱时那样充满了激情，却也有饮之如清泉般淡雅的感觉。
 
-02
+# 02
 
 每天彼此上班下班、发信息、打电话、隔三差五的约会，偶尔的小矛盾也都会磨合好。半年后，俩人商量着要不将谈婚论嫁的日程提上来吧。
 
