--- a/_posts/2017-02-01-article-2.markdown
+++ b/_posts/2017-02-01-article-2.markdown
@@ -17,35 +17,52 @@ author: 巫小诗
 回家跟父母倾诉这件事，他们只是安慰道，男生调皮，心眼是不坏的，你当没听见就好了。
 母亲在医院工作，偶尔有人托她帮忙，对方都会客客气气地。
 唯独这一位我们欠他钱的熟人，他家人在我妈工作的医院住院时，各种麻烦我妈，并且没有什么抱歉之意，似乎认为这是理所应当的，谁让我们家欠他钱呢。
+
 后来我问老妈，银行的利息到底有多贵？贵到要这般心怀亏欠？
 
 **她说，其实没有很贵，当初不应该省这点钱的，人情，比利息贵多了。**
 
 # 02
-　　毕业季的时候，我一位大学同学参加某国企的校园招聘。
-　　其实他个人非常优秀，拿offer的难度并不大，可是在快放榜的时候，他的父母不放心，怕他考不上。
-　　父母想方设法地帮他找熟人，最终找到该单位一位人事部门的工作人员，大包小包加红包地去他家送了礼。
-　　其实这场招聘非常公平透明，分数已经出来了，只是还没公布而已，同学分数很高，录用是稳稳的。
-　　最终同学顺利录用，完全靠的自己，却被周围人私下诟病了许久，说“他呀，是个关系户”。
-　　
+毕业季的时候，我一位大学同学参加某国企的校园招聘。
+
+其实他个人非常优秀，拿offer的难度并不大，可是在快放榜的时候，他的父母不放心，怕他考不上。
+
+父母想方设法地帮他找熟人，最终找到该单位一位人事部门的工作人员，大包小包加红包地去他家送了礼。
+
+其实这场招聘非常公平透明，分数已经出来了，只是还没公布而已，同学分数很高，录用是稳稳的。
+
+**最终同学顺利录用，完全靠的自己，却被周围人私下诟病了许久，说“他呀，是个关系户”。**
+
 # 03
-　　学妹暑假去北京实习，住房还没着落，本来打算通过租房中介找，学妹的母亲非说北京有个熟人，不用花中介那个冤枉钱。
-　　这个熟人，只是母亲高中时的一位老同学，跟租房行业也搭不上关系，可是在母亲的“联络感情”下，学妹的租房大事就拜托在这位熟人阿姨身上了。
-　　学妹去北京时，自己行李很多，还给阿姨捎了大堆特产。
-　　阿姨帮她相中的房子，是阿姨朋友的闲置房，“本来都快租出去了，我特意让他留给你的”。
-　　这个小房子，离单位不太近，环境不太好，价格也不太便宜，是一个如果跟着中介去看房，会被一口否决的房子。
-　　学妹有些尴尬，私下问母亲意思，母亲说“特意麻烦人家找的，还特意给咱们留的，就租下吧”。
-　　学妹只好租下这个不怎么喜欢的房子，连讨价还价都没有了余地。
+学妹暑假去北京实习，住房还没着落，本来打算通过租房中介找，学妹的母亲非说北京有个熟人，不用花中介那个冤枉钱。
+
+这个熟人，只是母亲高中时的一位老同学，跟租房行业也搭不上关系，可是在母亲的“联络感情”下，学妹的租房大事就拜托在这位熟人阿姨身上了。
+
+学妹去北京时，自己行李很多，还给阿姨捎了大堆特产。
+
+阿姨帮她相中的房子，是阿姨朋友的闲置房，“本来都快租出去了，我特意让他留给你的”。
+
+这个小房子，离单位不太近，环境不太好，价格也不太便宜，是一个如果跟着中介去看房，会被一口否决的房子。
+
+学妹有些尴尬，私下问母亲意思，母亲说“特意麻烦人家找的，还特意给咱们留的，就租下吧”。
+
+**学妹只好租下这个不怎么喜欢的房子，连讨价还价都没有了余地。**
 　　
 # 04
-　　那些本可自己解决的事情，因为“找熟人”，原本平等的关系变得低人一等，原本顾客至上的买卖交易变得迁就和隐忍。
-　　即便没帮上忙，只要开了口，就亏欠了这个人情，甚至在很长一段时间里，遭人诟病。
-　　原则也好，价钱也罢，在熟人面前，都不适合再谈起。
-　　为了省钱、省事、省时间，我们找了太多次熟人，我们总是忘了，省下的，是一点小利小惠，亏欠的，是漫无边际的人情。
-　　能自己解决的事情，不要去找熟人。
+
+> 那些本可自己解决的事情，因为“找熟人”，原本平等的关系变得低人一等，原本顾客至上的买卖交易变得迁就和隐忍。
+
+即便没帮上忙，只要开了口，就亏欠了这个人情，甚至在很长一段时间里，遭人诟病。
+
+原则也好，价钱也罢，在熟人面前，都不适合再谈起。
+
+为了省钱、省事、省时间，我们找了太多次熟人，我们总是忘了，**省下的，是一点小利小惠，亏欠的，是漫无边际的人情**。
+
+**能自己解决的事情，不要去找熟人。**
 
 【版权归作者所有，HUGO整理发布】
-　　作者：巫小诗，辞职写作的自由撰稿人，现实如山，而她浪漫如云。新浪微博@巫小诗，微信公众号：巫小诗（id：bywuxiaoshi）。
+
+作者：巫小诗，辞职写作的自由撰稿人，现实如山，而她浪漫如云。新浪微博@巫小诗，微信公众号：巫小诗（id：bywuxiaoshi）。
 
 转载请联系作者授权
 
