--- a/_posts/2017-02-01-article-2.markdown
+++ b/_posts/2017-02-01-article-2.markdown
@@ -6,7 +6,7 @@ date:   2017-02-01 23:16:47 +0530
 categories: jekyll update
 banner: 
 categories: [one, two]
-color: BF360C
+color: 9E9D24
 author: 巫小诗
 ---
 # 01
