--- a/_posts/2017-02-01-article-1.markdown
+++ b/_posts/2017-02-01-article-1.markdown
@@ -19,7 +19,7 @@ author: 摆渡人
 
 小蕾觉得那就处处看吧，要是合适就在一起，给彼此一个机会。
 
-老实男真的很老实，看起来憨憨的样子让人很有安全感。对小蕾有求必应，说话不大声，也从不说脏话，待人有礼有节。接触了一段时间后，小蕾发现他确实像阿姨说的，没有花花肠子，是个老实安分的人。
+**老实男真的很老实，看起来憨憨的样子让人很有安全感。对小蕾有求必应，说话不大声，也从不说脏话，待人有礼有节。**接触了一段时间后，小蕾发现他确实像阿姨说的，没有花花肠子，是个老实安分的人。
 
 小蕾跟他确定了关系。日子虽然没有像年轻恋爱时那样充满了激情，却也有饮之如清泉般淡雅的感觉。
 
@@ -37,7 +37,7 @@ author: 摆渡人
 
 小蕾装作不经意的在群里问了句：玩这么嗨，这是哪儿啊？
 
-被告知具体地点后，小蕾火速叫上了自己的发小沙子哥一起前往。一路上小蕾忐忑不安，她完全不知道是什么情况，她从来不会想到一直这么老实安分的人也会这样。
+被告知具体地点后，小蕾火速叫上了自己的发小沙子哥一起前往。**一路上小蕾忐忑不安，她完全不知道是什么情况，她从来不会想到一直这么老实安分的人也会这样。**
 
 # 03
 
@@ -47,7 +47,7 @@ author: 摆渡人
 
 小蕾感觉一股血液冲上头顶，她想冲出去，但是她忍住了。
 
-后来沙子哥告诉小蕾，他跟前台的人闲聊了。说他们这群人来过很多次了，每次都有小蕾男朋友。服务员对他印象很深，因为他玩的最开。有次还当众在包间里，就要和这些小姐玩“全垒打”。
+后来沙子哥告诉小蕾，他跟前台的人闲聊了。**说他们这群人来过很多次了，每次都有小蕾男朋友。服务员对他印象很深，因为他玩的最开。**有次还当众在包间里，就要和这些小姐玩“全垒打”。
 
 小蕾回去和老实男挑明了并表示分手。老实男苦苦哀求说，他就这一次迫不得已，逢场作戏而已。他这么老实的人，保证只犯这一次。
 
@@ -57,25 +57,23 @@ author: 摆渡人
 
 有钱男人平常都把你们这些女人玩腻了，你们才想要找个老实人。那我就当个老实人啊，要有钱有貌谁愿意装这个老实人。
 
-
- 
 小蕾扇了他一巴掌，从此分道扬镳。
 
 # 04
 
 太多人都和小蕾一样，以为老实是一个人的本性，在以后漫长的生活中这个特质不会褪色。
 
-然而老实有时候只不过是一个人的表象，可以进行演绎，也可以暗藏涌流。
+**然而老实有时候只不过是一个人的表象，可以进行演绎，也可以暗藏涌流。**
 
 有些所谓的老实人，只不过是因为没钱没能力不有趣长得又一般，如果再没有老实这个优点，可能永远不会有女人愿意和他在一起。
 
 在选择恋爱结婚对象的时候，如果他的老实安分可靠成为你选择他最大的因素的时候，那你要深思熟虑了。因为大部分人的老实都是不堪一击的，在这纷扰世界的诱惑面前可能瞬间即变。
 
-很多时候老实人浪起来，你我都招架不住。所谓绅士，无非是更耐心的狼。
+- 很多时候老实人浪起来，你我都招架不住。所谓绅士，无非是更耐心的狼。
 
-看过一篇文章，有一句话说“你不是人好，你只是没机会放荡”。同理，你不是老实，你只是没资本不老实。
+看过一篇文章，有一句话说**“你不是人好，你只是没机会放荡”**。同理，你不是老实，你只是没资本不老实。
 
-刘墉说过“愈是没身份、没地位、没财产、没退路的男人，你愈要小心。”
+**刘墉说过“愈是没身份、没地位、没财产、没退路的男人，你愈要小心。”**
 
 往往这种男人一旦得势，你曾经认为的“老实可靠”，将是证明你瞎了眼最狠的证据。
 
@@ -97,11 +95,11 @@ author: 摆渡人
 
 真正的老实是虚怀若谷，是面对物欲横流还能宠辱不惊，是经历诱惑还能坐怀不乱，是美色环绕还能专一无二心。
 
-当你真正面对名利淡然处之的时候，你才有资格说你淡泊名利。别名利味儿都没闻过，就说自己淡泊名利。
+当你真正面对名利淡然处之的时候，你才有资格说你淡泊名利。**别名利味儿都没闻过，就说自己淡泊名利。**
 
 就像一个穷人跟你说金钱是这世界上最庸俗的东西，有钱人的生活极其低级乏味，你千万别信。
 
-一个身无一物且没有经过欲望、名利、权利的洗礼的人说自己绝对老实可靠本分的时候，你也千万别信。
+一个身无一物且没有**经过欲望、名利、权利的洗礼**的人说自己绝对老实可靠本分的时候，你也千万别信。
 
 那些愿意在你面前低声下气的老实人，不过是为了得到他们想要的东西而已。
 
