--- a/_posts/2017-02-01-article-3.markdown
+++ b/_posts/2017-02-01-article-3.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "2017-02-01 沉淀"
-description: 姐这辈子最怕欠人情，因为人情比利息贵多了，能用钱解决的事尽量别找熟人。 能自己解决的事情，不要去找熟人。
+title:  "2017年02月 沉淀"
+description: 沉淀，就是把认同的观点刻印在自己的石碑上。
 date:   2017-02-01 23:52:47 +0530
 categories: jekyll update
 banner: 
@@ -9,5 +9,7 @@ categories: [one, two]
 color: 7E57C2
 author: Liberalman
 ---
-当年里根在柏林墙下点名呼叫戈尔巴乔夫，要他把墙拆掉。几乎所有人————包括支持他的共和党人————都一致嘲笑、谴责里根的无知和莽撞，因为柏林墙是苏联东欧集团绝对的底线。但很多所谓的底线其实是经不起挑战的，只是众人已经习惯了服从而已。
+当年里根在柏林墙下点名呼叫戈尔巴乔夫，要他把墙拆掉。几乎所有人——包括支持他的共和党人——都一致嘲笑、谴责里根的无知和莽撞，因为柏林墙是苏联东欧集团绝对的底线。但很多所谓的底线其实是经不起挑战的，只是众人已经习惯了服从而已。
+
+Gratitude：Overcome negtive thoughts.（如何克服消极思维）这有一个心理学小技巧可以帮助你克服消极思维。下次当你思维很消极的时候，绑一根橡皮筋在手上。当消极想法出现的时候，就用力拉开橡皮筋让它弹回去，通过把疼痛和消极思维联系在一起，你的潜意思会开始变得警觉起来，并阻止我们陷入消极思维当中。因为潜意识会保护人体不受伤害，当消极思维产生，我们就立马给它一个疼痛刺激，这会让潜意识立马阻止消极思维的蔓延。
 
