--- a/_posts/2017-02-02-article-4.markdown
+++ b/_posts/2017-02-02-article-4.markdown
@@ -6,11 +6,9 @@ date:   2017-02-02 14:28:47 +0530
 categories: jekyll update
 banner: 
 categories: [one, two]
-color: 7E57C2
+color: 00897B
 author: 鲁先圣
 ---
-# 曾主张废除汉字的钱玄同
-
 在20世纪初，有一位30多岁的青年学者在华夏大地上四处奔波。他身材不高，戴着近视眼镜；夏天穿件竹布长衫，腋下夹一个黑皮包。他走到哪里，哪里就响起了高谈阔论的声音，以语言偏激而犀利、常有惊人惊世之语而闻名。他就是钱玄同。他之所以四处奔波，是为了约稿，或跟友人讨论“五四”新文化运动中面临的种种问题。
 
 在“五四”文学革命的前驱者中，钱玄同可说是一员骁将，一位急先锋。他虽然并不是发难者，但却最早给发难者以强有力的支持。
