--- a/_posts/2017-02-01-article-3.markdown
+++ b/_posts/2017-02-01-article-3.markdown
@@ -13,3 +13,5 @@ author: Liberalman
 
 Gratitude：Overcome negtive thoughts.（如何克服消极思维）这有一个心理学小技巧可以帮助你克服消极思维。下次当你思维很消极的时候，绑一根橡皮筋在手上。当消极想法出现的时候，就用力拉开橡皮筋让它弹回去，通过把疼痛和消极思维联系在一起，你的潜意思会开始变得警觉起来，并阻止我们陷入消极思维当中。因为潜意识会保护人体不受伤害，当消极思维产生，我们就立马给它一个疼痛刺激，这会让潜意识立马阻止消极思维的蔓延。
 
+胡适在1956年对鲁迅的怀念，其实可以用鲁迅1927年的一段演讲来解释。鲁迅说：“中国人的性情是总喜欢调和，折中的。譬如你说，这屋子太暗，须在这里开一个窗，大家一定不允许的。但如果你主张拆掉屋顶，他们就会来调和，愿意开窗了。没有更激烈的主张，他们总连平和的改革也不肯行。”鲁迅还说，胡适当年提倡“文学革命”，好比开窗，反对声浪是很高的；但钱玄同冒出来主张废掉汉字，好比拆掉屋顶，胡适的“文学革命”就少了阻力，白话文随后也渐渐流行了起来。（13）胡适毕生致力于从体制内“开窗”，进退维谷之时，理当怀念毕生致力于“拆掉屋顶”的鲁迅。从这个意义上来说，革命是改良的驱动力，鲁迅也确实是胡适的同路人。
+
