--- a/_posts/2017-02-02-article-7.markdown
+++ b/_posts/2017-02-02-article-7.markdown
@@ -1,9 +1,7 @@
 ---
 layout: post
 title:  "从小就是乖乖仔是怎样子的?"
-description: "1.我就是别人口中的“别人家的孩子”。
-2.“要懂得谦让，这个给小妹妹好吗。”“好。”
-3.和同学出去无论干什么，到晚上五点以后就觉得该回家，晚饭必须在家吃。"
+description: "1.我就是别人口中的“别人家的孩子”。2.“要懂得谦让，这个给小妹妹好吗。”“好。” 3.和同学出去无论干什么，到晚上五点以后就觉得该回家，晚饭必须在家吃。"
 date:   2017-02-02 22:06:47 +0530
 categories: jekyll update
 banner: "http://read.html5.qq.com/image?src=forum&q=5&r=0&imgflag=7&imageUrl=http://mmbiz.qpic.cn/mmbiz_jpg/0WvIQqWiafkmfa5Z4hppTkGiaial6biaU5kTMjfkhpBTWFn7QEWjqoZKlMqkHot63PoeTZ7QLLD1VMRLOezuRDFxuA/0?wx_fmt=jpeg"
@@ -20,7 +18,7 @@ author: Liberalman
 
 4.大学都毕业了，谈恋爱还是会有种犯错误的感觉。
 
-5.突然有了自己的想法并且与家长相悖，他们就会说“行，你翅膀硬了。”唉，真的很烦人。
+5.突然有了自己的想法并且与家长相悖，他们就会说“行，你翅膀硬了。”唉，各种道德绑架，真的很烦人。
 
 6.对父母各种顺从，因为只要你说不，他们就会说你大了，不听话了。
 
@@ -36,13 +34,15 @@ author: Liberalman
 
 12.偶尔撒一次谎家人是会相信的。
 
-13.叛逆的一面都藏在了心里，如果有一天爆发了发了脾气之后，家人就说我变了，变坏了，跟谁学的。
+13.大家都觉得我脾气好，怎么说我都不会生气，然而底线这种东西谁都有，如果有一天爆发了发了脾气之后，家人就说我变了，变坏了，跟谁学的。
 
-14.出门必须说去哪和谁，晚上不能在外面过夜，必须在八点之前回家。
+14.出门必须说去哪和谁，晚上不能在外面过夜，必须在八点(九点/十点)之前回家。
 
 15.没有叛逆，没有早恋，没有青春。
 
-16.说实在的，从小就乖的孩子，不乖的时候比从小就不乖的孩子还吓人。
+16.从小就乖的孩子，不乖的时候比从小就不乖的孩子还吓人。
+
+17.闺蜜跟她妈说和我去玩，绝对放行
 
 参考
 >https://wx.abbao.cn/a/10897-b12ddd0afad354ee.html
