--- a/_posts/2017-02-01-article-3.markdown
+++ b/_posts/2017-02-01-article-3.markdown
@@ -13,5 +13,12 @@ author: Liberalman
 
 Gratitude：Overcome negtive thoughts.（如何克服消极思维）这有一个心理学小技巧可以帮助你克服消极思维。下次当你思维很消极的时候，绑一根橡皮筋在手上。当消极想法出现的时候，就用力拉开橡皮筋让它弹回去，通过把疼痛和消极思维联系在一起，你的潜意思会开始变得警觉起来，并阻止我们陷入消极思维当中。因为潜意识会保护人体不受伤害，当消极思维产生，我们就立马给它一个疼痛刺激，这会让潜意识立马阻止消极思维的蔓延。
 
-胡适在1956年对鲁迅的怀念，其实可以用鲁迅1927年的一段演讲来解释。鲁迅说：“中国人的性情是总喜欢调和，折中的。譬如你说，这屋子太暗，须在这里开一个窗，大家一定不允许的。但如果你主张拆掉屋顶，他们就会来调和，愿意开窗了。没有更激烈的主张，他们总连平和的改革也不肯行。”鲁迅还说，胡适当年提倡“文学革命”，好比开窗，反对声浪是很高的；但钱玄同冒出来主张废掉汉字，好比拆掉屋顶，胡适的“文学革命”就少了阻力，白话文随后也渐渐流行了起来。（13）胡适毕生致力于从体制内“开窗”，进退维谷之时，理当怀念毕生致力于“拆掉屋顶”的鲁迅。从这个意义上来说，革命是改良的驱动力，鲁迅也确实是胡适的同路人。
+胡适在1956年对鲁迅的怀念，其实可以用鲁迅1927年的一段演讲来解释。鲁迅说：“中国人的性情是总喜欢调和，折中的。譬如你说，这屋子太暗，须在这里开一个窗，大家一定不允许的。但如果你主张拆掉屋顶，他们就会来调和，愿意开窗了。没有更激烈的主张，他们总连平和的改革也不肯行。--《无声的中国》 1927”鲁迅还说，胡适当年提倡“文学革命”，好比开窗，反对声浪是很高的；但钱玄同冒出来主张废掉汉字，好比拆掉屋顶，胡适的“文学革命”就少了阻力，白话文随后也渐渐流行了起来。（13）胡适毕生致力于从体制内“开窗”，进退维谷之时，理当怀念毕生致力于“拆掉屋顶”的鲁迅。从这个意义上来说，革命是改良的驱动力，鲁迅也确实是胡适的同路人。
 
+中国大约太老了，社会上事无大小，都恶劣不堪，像一只黑色的染缸，无论加进什么新东西去，都变成漆黑。可是除了再想法子来改革之外，也在没有别的路。我看一切理想家，不是怀念“过去”，就是“希望将来”，而对于“现在”这一个题目，都缴了白卷，因为谁也开不出药方。所有最好的药方即所谓“希望将来”的就是。 --《两地书》 1925
+
+我先前总以为人是有罪，所以枪毙或坐监的。现在才知道其中的许多，是先因为被人认为“可恶”，这才终于犯了罪。 --《可恶罪》 1927
+
+中国中流的家庭，教孩子大抵只有两种法。之一是任其跋扈，一点也不管，骂人固可，打人亦无不可，在门内或门前是暴主，是霸王，但到外面便如失了网的蜘蛛一般，立刻毫无能力。其二，是终日给以冷遇或呵斥，甚于打扑，使他畏畏退缩，仿佛一个奴才，一个傀儡，然而父母却美其名曰“听话”，自以为是教育的成功，待到他们外面来，则如暂出樊笼的小禽，他决不会飞鸣，也不会跳跃。 -- 《海上的儿童》 1933
+
+我先前的攻击社会，其实也是无聊的。社会没有知道我在攻击，倘一知道，我早已死无葬身之所了......我之得以偷生者，因为他们大多数不识字，不知道，并且我的话也无效力，如一箭之入大海。否则，几则杂感，就可以送命的。民众的惩罚之心，并不下于学者和军阀。 -- 《答有恒先生》 1927
