--- a/_posts/2017-04-30-article-11.markdown
+++ b/_posts/2017-04-30-article-11.markdown
@@ -20,6 +20,10 @@ author: Liberalman
 答：每次两只蚂蚁相遇各自掉头，其实可以等价于这两只蚂蚁各自向前，也就是让这两只蚂蚁互换任务。这样所有的蚂蚁就可以视为“各行其道”了。
 问题一下明朗了，所需要的时间就是走到掉下去花时间最长的蚂蚁，其上限即在一端的蚂蚁爬到另一端的时间，也就是题中的5分钟。
 
+2017-03-
+
+可重入，即可预测的，输入相同数据产生相同输出。
+
 
 
 
